# mypy-numpy

./: .gitignore  LICENSE  README.md  pyproject.toml
src/mypy_numpy/: __init__.py  foo.py
