[project]
name = "mypy_numpy"
description = ""
authors = [
    {name = "Roberto Di Remigio Eikås", email = "roberto@algorithmiq.fi"},
]
dependencies = [
    "numpy>=1.24.2",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "mypy>=1.1.1",
]

[build-system]
requires = ["setuptools", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/mypy_numpy/_version.py"

[tool.mypy]
python_version = "3.9"

plugins = [
  "numpy.typing.mypy_plugin"
]

check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_defs = true
implicit_reexport = false
warn_unused_ignores = true
warn_redundant_casts = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
show_traceback = true

[[tool.mypy.overrides]]
module = "numpy"
disallow_any_generics = false
